Remove overflow:hidden to avoid travel suggestions overlapping the drop menu with locations via locations.

--- a/src/page-modules/assistant/assistant.module.css
+++ b/src/page-modules/assistant/assistant.module.css
@@ -50,7 +50,6 @@
   grid-area: alternatives;
   width: 100%;
   background-color: var(--static-background-background_accent_1-background);
-  overflow: hidden;
 }
 
 .alternatives {
